# bashpp

./: CMakeLists.txt  LICENSE.md  README.md
libbashpp/: CMakeLists.txt
libbashpp/bashpp/: command.hpp  context.hpp  env.hpp  file_descriptor.hpp  helpers.hpp  node.hpp  pipeline.hpp  process.hpp  run_visitor.hpp  start_visitor.hpp  visitor.hpp  wait_visitor.hpp  wrappers.hpp
libbashpp/integration/: main.cpp  script.py  test_run.py
libbashpp/src/: command.cpp  context.cpp  env.cpp  file_descriptor.cpp  node.cpp  pipeline.cpp  process.cpp  run_visitor.cpp  start_visitor.cpp  visitor.cpp  wait_visitor.cpp  wrappers.cpp
libbashpp/tests/: command.cpp  context.cpp  env.cpp  file_descriptor.cpp  pipeline.cpp  process.cpp  run_visitor.cpp  start_visitor.cpp  visitor.cpp  wait_visitor.cpp  wrappers.cpp
